Fix footer alignment

--- a/styles.css
+++ b/styles.css
@@ -47,17 +47,24 @@ body {
   box-shadow: var(--shadow-elevation-high);
 }
 
+.wrapper-content {
+  border: solid 2px red;
+  text-align: center;
+  /* padding: ; */
+}
+
 .main-container {
-  height: 90%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   row-gap: 7rem;
   background-color: #61c9a8;
 }
 
 .title {
+  margin: 5rem 0;
 }
 
 .grids {
@@ -139,7 +146,8 @@ body {
 .footer {
   background-color: #343a40;
   width: 100%;
-  height: 10%;
+  height: 100%;
+  flex-basis: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
